- style: fixed the sidebar height issue - Also stopped the sidebar from covering content

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -2,24 +2,28 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
- @import "~@fortawesome/fontawesome-free/css/all.css";
- /* ?Hack? */
- @import '~semantic-ui-css/semantic.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
+/* ?Hack? */
+@import '~semantic-ui-css/semantic.css';
+
+#root {
+  height: 100%;
+}
 
 body {
   position: relative;
   /* color: white; */
-  height: 100vh;
+  /* height: 100vh; */
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   /* overflow-y: hidden; */
 }
 
 h2 {
-  margin: 0;
+  margin: 0 auto;
   font-size: 2.25rem;
   font-weight: bold;
   letter-spacing: -0.025em;
-  color: #fff;
+  /* color: #fff; */
 }
 
 p {
@@ -31,7 +35,7 @@ li {
 }
 
 a {
-  color: white;
+  /* color: white; */
   opacity: 0.75;
   text-decoration: none;
 }
@@ -47,15 +51,14 @@ a:hover {
 body {
   margin: 0;
   /* text-align: center; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
